k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plumb
  labels:
    app.kubernetes.io/name: plumb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plumb
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
